fix poor text contrast for date range indicator in calendar dark mode

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -13,6 +13,7 @@
     flex-flow: column;
 
     .cp-toolbar-bottom-mid > div {
+        color: @cryptpad_text_col;
         .cp-small { display: none; }
     }
 
